[package]
name        = "dirs-sys-next"
version     = "0.1.0"
authors     = ["The @xdg-rs members"]
description = "system-level helper functions for the dirs and directories crates"
edition     = "2018"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/xdg-rs/dirs/tree/master/dirs-sys"

[badges]
maintenance = { status = "as-is" }

[dependencies]
sgx_tstd                       = {  path  = "/root/sgx/sgx_tstd" }



[target.'cfg(unix)'.dependencies]
sgx_libc                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"] }
