[package]
name = "blake2"
version = "0.8.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "BLAKE2 hash functions"
documentation = "https://docs.rs/blake2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
# digest = "0.8"
digest = {path = "/root/sgx/teerustpython/already/traits-digest-v0.8.1/digest"}
byte-tools = "0.3"
# crypto-mac = "0.7"
crypto-mac = {path = "/root/sgx/teerustpython/already/traits-digest-v0.8.1/crypto-mac"}
opaque-debug = "0.2"
sgx_tstd = { path = "/root/sgx/sgx_tstd"}


[dev-dependencies]
digest = { path = "/root/sgx/teerustpython/already/traits-digest-v0.8.1/digest", features = ["dev"] }
crypto-mac = {path = "/root/sgx/teerustpython/already/traits-digest-v0.8.1/crypto-mac", features = ["dev"] }
hex-literal = "0.1"

[features]
default = ["std"]
std = ["digest/std", "crypto-mac/std"]
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
